// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectField Checkbox type matches snapshot with no selection 1`] = `
<View
  style={
    {
      "marginBottom": 8,
    }
  }
>
  <Text
    style={
      {
        "color": "#000000",
        "fontSize": 18,
        "fontWeight": "600",
        "marginBottom": 16,
      }
    }
  >
    Organizations
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "opacity": 1,
        "paddingVertical": 12,
      }
    }
    testID="checkbox-option1"
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderColor": "#007AFF",
          "borderRadius": 6,
          "borderWidth": 2,
          "height": 24,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 24,
        }
      }
    />
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 16,
        }
      }
    >
      Option 1
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "opacity": 1,
        "paddingVertical": 12,
      }
    }
    testID="checkbox-option2"
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderColor": "#007AFF",
          "borderRadius": 6,
          "borderWidth": 2,
          "height": 24,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 24,
        }
      }
    />
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 16,
        }
      }
    >
      Option 2
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "opacity": 1,
        "paddingVertical": 12,
      }
    }
    testID="checkbox-option3"
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderColor": "#007AFF",
          "borderRadius": 6,
          "borderWidth": 2,
          "height": 24,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 24,
        }
      }
    />
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 16,
        }
      }
    >
      Option 3
    </Text>
  </View>
</View>
`;

exports[`MultiSelectField Checkbox type matches snapshot with selections 1`] = `
<View
  style={
    {
      "marginBottom": 8,
    }
  }
>
  <Text
    style={
      {
        "color": "#000000",
        "fontSize": 18,
        "fontWeight": "600",
        "marginBottom": 16,
      }
    }
  >
    Organizations
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "opacity": 1,
        "paddingVertical": 12,
      }
    }
    testID="checkbox-option1"
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderColor": "#007AFF",
          "borderRadius": 6,
          "borderWidth": 2,
          "height": 24,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 24,
        }
      }
    >
      <Text
        color="#007AFF"
        name="checkmark"
        size={18}
        testID="icon"
      >
        checkmark
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 16,
        }
      }
    >
      Option 1
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "opacity": 1,
        "paddingVertical": 12,
      }
    }
    testID="checkbox-option2"
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderColor": "#007AFF",
          "borderRadius": 6,
          "borderWidth": 2,
          "height": 24,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 24,
        }
      }
    >
      <Text
        color="#007AFF"
        name="checkmark"
        size={18}
        testID="icon"
      >
        checkmark
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 16,
        }
      }
    >
      Option 2
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "opacity": 1,
        "paddingVertical": 12,
      }
    }
    testID="checkbox-option3"
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderColor": "#007AFF",
          "borderRadius": 6,
          "borderWidth": 2,
          "height": 24,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 24,
        }
      }
    />
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 16,
        }
      }
    >
      Option 3
    </Text>
  </View>
</View>
`;

exports[`MultiSelectField Chip type matches snapshot with no selection 1`] = `
<View
  style={
    {
      "marginBottom": 8,
    }
  }
>
  <Text
    style={
      {
        "color": "#000000",
        "fontSize": 18,
        "fontWeight": "600",
        "marginBottom": 16,
      }
    }
  >
    Languages
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 8,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#E5E5EA",
          "borderColor": "#C6C6C8",
          "borderRadius": 20,
          "borderWidth": 1,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        }
      }
      testID="chip-option1"
    >
      <Text
        style={
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "fontWeight": "500",
            },
            false,
          ]
        }
      >
        Option 1
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#E5E5EA",
          "borderColor": "#C6C6C8",
          "borderRadius": 20,
          "borderWidth": 1,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        }
      }
      testID="chip-option2"
    >
      <Text
        style={
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "fontWeight": "500",
            },
            false,
          ]
        }
      >
        Option 2
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#E5E5EA",
          "borderColor": "#C6C6C8",
          "borderRadius": 20,
          "borderWidth": 1,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        }
      }
      testID="chip-option3"
    >
      <Text
        style={
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "fontWeight": "500",
            },
            false,
          ]
        }
      >
        Option 3
      </Text>
    </View>
  </View>
</View>
`;

exports[`MultiSelectField Chip type matches snapshot with selections 1`] = `
<View
  style={
    {
      "marginBottom": 8,
    }
  }
>
  <Text
    style={
      {
        "color": "#000000",
        "fontSize": 18,
        "fontWeight": "600",
        "marginBottom": 16,
      }
    }
  >
    Languages
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 8,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#007AFF",
          "borderColor": "#007AFF",
          "borderRadius": 20,
          "borderWidth": 1,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        }
      }
      testID="chip-option1"
    >
      <Text
        style={
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "fontWeight": "500",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Option 1
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#E5E5EA",
          "borderColor": "#C6C6C8",
          "borderRadius": 20,
          "borderWidth": 1,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        }
      }
      testID="chip-option2"
    >
      <Text
        style={
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "fontWeight": "500",
            },
            false,
          ]
        }
      >
        Option 2
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#007AFF",
          "borderColor": "#007AFF",
          "borderRadius": 20,
          "borderWidth": 1,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        }
      }
      testID="chip-option3"
    >
      <Text
        style={
          [
            {
              "color": "#000000",
              "fontSize": 14,
              "fontWeight": "500",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Option 3
      </Text>
    </View>
  </View>
</View>
`;
